--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 	:root {
-		--skyBlue: skyblue;
+		--skyBlue: deepskyblue;
 		--grassGreen: #7FFFAB;
 		--darkGreen: #5DC967;
 		--svgWidth: 1000px;
@@ -195,7 +195,7 @@
 	}
 
 	#alex {
-		fill: deepskyblue;
+		fill: lightsalmon;
 	}
 
 	h1, p, a {
@@ -438,13 +438,13 @@
 				<div class='contact content' id='content_contact'>
 					<h1>Email</h1>
 					<a href='mailto:alex.pegg@mail.utoronto.ca'>alex.pegg@mail.utoronto.ca</a>
-					<br><br>
+					<br><br><br>
 					<h1>LinkedIn</h1>
 					<a href='https://www.linkedin.com/in/alexander-pegg-68b954163/' target="_blank">Alexander Pegg -- LinkedIn</a>
-					<br><br>
+					<br><br><br>
 					<h1>GitHub</h1>
 					<a href='https://github.com/peggalex' target="_blank">peggalex -- github</a>
-					<br><br>
+					<br><br><br>
 					<h1>Latex Resume</h1>
 					<a href='https://www.overleaf.com/read/kttybhdbwppk' target="_blank">LaTeX resume (professional)</a>
 					<br>
