--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 	:root {
-		--skyBlue: deepskyblue;
+		--skyBlue: skyblue;
 		--grassGreen: #7FFFAB;
 		--darkGreen: #5DC967;
 		--svgWidth: 1000px;
@@ -195,11 +195,11 @@
 	}
 
 	#alex {
-		fill: lightsalmon;
+		fill: deepskyblue;
 	}
 
 	h1, p, a {
-		font-size: 24px;
+		font-size: 20px;
 	}
 
 	/*h1::before,h1::after {
@@ -396,25 +396,22 @@
 					<p>I was born and raised in Hong Kong. I'm half British and half Filipino.</p>
 					<br>
 					<h1>School</h1>
-					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a TA for CSC108, and it's all downhill from here</p>
+					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a TA for CSC108, and it's all downhill from here.</p>
 					<br>
 					<h1>Interests</h1>
-					<p>I like chicken nuggets and apple pies</p>
+					<p>I like chicken nuggets and apple pies.	</p>
 					<br>
 				</div>
 				<div class='projects content' id='content_projects'>
 					<h1>2048 Game</h1>
 					<a href="https://peggalex.github.io/test2048" target="_blank">https://peggalex.github.io/test2048</a>
-					<p>Comprehensive model/view/controller game.</p>
-					<p> Uses arrow key event listeners (controller),</p>
-					<p> to update game state (model)</p>
-					<p> and display it in an animated fluid ui (view).</p>
+					<p>Comprehensive model/view/controller game. Control with arrow keys.</p>
 					<br>
 					<br>
 					<h1>Simple grade calculator</h1>
 					<a href="https://peggalex.github.io/rachel.html" target="_blank">https://peggalex.github.io/rachel.html</a>
 					<p>Calculate final grade given marks and weights.</p>
-					<p>Additionally, assumes grades are normally distributed and predict future grades.</p>
+					<p>Also assumes grades are normally distributed and can predict future grades.</p>
 					<br>
 					<br>
 					<h1>Hong Kong SVG animation</h1>
