--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	}
 
 	body {
-		background-color: var(--grassGreen);
+		background-color: var(--skyBlue);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -38,7 +38,7 @@
 		background-color: var(--grassGreen);
 		color: white;
 		font-size: 20px;
-		border: solid;
+		border: none;
 		border-color: white;
 		border-width: thin;
 		padding: 15px;
