--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 	:root {
-		--skyBlue: skyblue;
+		--skyBlue: lightskyblue;
 		--grassGreen: #7FFFAB;
 		--darkGreen: #5DC967;
 		--svgWidth: 1000px;
@@ -399,7 +399,7 @@
 					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a TA for CSC108, and it's all downhill from here.</p>
 					<br>
 					<h1>Interests</h1>
-					<p>I like chicken nuggets and apple pies.	</p>
+					<p>I like chicken nuggets and apple pies.</p>
 					<br>
 				</div>
 				<div class='projects content' id='content_projects'>
