--- a/resume3.html
+++ b/resume3.html
@@ -151,7 +151,7 @@
 	}
 
 
-	#left > div, #right > div, #header {
+	#left > div, #right > div {
 		border: dashed;
 		border-width: thin;
 		border-color: #C8C8C8;
