--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/> <!-- firefox throws an error without this -->
-	<link href="https://fonts.googleapis.com/css?family=Public+Sans:100&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Public+Sans:100,300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">	
 </head>
 <style>
@@ -31,7 +31,7 @@
 
 	body *{
 		font-family: 'Public Sans', sans-serif;
-		font-weight: 100;
+		font-weight: 300;
 	}
 
 	button {
@@ -194,7 +194,8 @@
 		fill:var(--skyBlue);
 	}
 
-	#alex {
+	#alex, #repository {
+		font-weight:300;
 		fill: deepskyblue;
 	}
 
