--- a/index.html
+++ b/index.html
@@ -194,9 +194,12 @@
 		fill:var(--skyBlue);
 	}
 
-	#alex, #repository {
-		font-weight:300;
+	#alex {
 		fill: deepskyblue;
+	}
+	
+	#alex, #repository {
+		font-weight:100;
 	}
 
 	h1, p, a {
