--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/> <!-- firefox throws an error without this -->
 	<link href="https://fonts.googleapis.com/css?family=Public+Sans:100&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:200&display=swap" rel="stylesheet">
-	<link href="./DPStickWebFont/stylesheet.css" rel="stylesheet">	
+	<link href="https://peggalex.github.io/DPStickWebFont/stylesheet.css" rel="stylesheet">	
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300&display=swap" rel="stylesheet">
 
 </head>
