--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 	<meta charset="utf-8"/> <!-- firefox throws an error without this -->
 	<link href="https://fonts.googleapis.com/css?family=Public+Sans:100&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:200&display=swap" rel="stylesheet">
@@ -552,8 +553,6 @@
 		</div>
 	</div>
 </body>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 <script>
 	sideButtonCallback = function() {
 	let buttActiveClass = "sideButtonActive"
@@ -575,7 +574,7 @@ $('#button_about').trigger('click')
 
 	var intervalFunctions = []
 
-	autumn_js = function() {
+	autumn_js = () => {
 		const svgNameSpace = "http://www.w3.org/2000/svg"
 
 		LeafBuilder = function(pointsStr, stemStr){
@@ -728,8 +727,6 @@ $('#button_about').trigger('click')
 		'#0068FF'
 
 	))
-
-	//$('head').append(`<script type="text/javascript" src="https://peggalex.github.io/${filename}"<`+'/script>')
 
 	callback = function(mutationsList, observer) {
 		observer.disconnect()
