--- a/index.html
+++ b/index.html
@@ -653,8 +653,6 @@ $('#button_about').trigger('click')
 
 		leafColors = ["#F15A24", "#ED1C24", "#FBB03B"]
 
-		leafPlace = document.getElementById('leafPlace')
-
 		animationTime = 3000 //in ms
 		interval = 500 //in ms
 
@@ -670,6 +668,7 @@ $('#button_about').trigger('click')
 			color = leafColors[color_i]
 
 			let leaf = leafBuilder.build(color, rotation, x, scale)
+			let leafPlace = document.getElementById('leafPlace')
 
 			if (leafPlace!=null){
 				leafPlace.appendChild(leaf)
