--- a/resume3.html
+++ b/resume3.html
@@ -49,7 +49,7 @@
 		color: mediumpurple;
 	}
 
-	span.and, span.in, span.with, span.for, span.equals, h4{
+	span.and, span.in, span.with, span.for, span.equals, span.of, h4{
 		/*color: lightcoral;*/
 		/*color: salmon;*/
 		color: darkorange;
@@ -73,12 +73,13 @@
 		color: black;
 	}
 
-	h3 {
+	h3, h3 span {
 		/*color: mediumspringgreen;*/
 		/*color: mediumseagreen;*/
 		/*color: aquamarine;*/
-		color: #00cc65;
+		color: #00cc65 !important;
 	}
+
 
 	h3::before {
 		content: '/* ';
@@ -185,7 +186,7 @@
 				<h2>education<span class='code'> ( ) = {</h2>
 				<div class='indented'>
 					<p>honorary bs | computer science <span class='and'>and</span> economics</p>
-					<p>university of toronto | <span class='num'>2016</span>-present</p>
+					<p>university <span class='of'>of</span> toronto | <span class='num'>2016</span>-present</p>
 					<p>cs gpa <span class='num'>3.1</span></p>
 					<p>working towards AI</p>
 				</div>
@@ -211,7 +212,7 @@
 
 					<h3>stat/math</h3>
 					<p>linear algebra I</p>
-					<p>calculus of several variables</p>
+					<p>calculus <span class='of'>of</span> several variables</p>
 					<p>probability <span class='and'>and</span> statistics I</p>
 					<p>introduction to mathematical proofs</p>
 					<p>calculus <span class='and'>and</span> linear algebra <span class='for'>for</span> commerce</p>
@@ -228,7 +229,7 @@
 					<h3>currently enrolled</h3>
 					<p>machine learning <span class='and'>and</span> data mining</p>
 					<p>algorithm design <span class='and'>and</span> analysis</p>
-					<p>economic analysis of law</p>
+					<p>economic analysis <span class='of'>of</span> law</p>
 					<p>money, banking <span class='and'>and</span> financial markets</p>
 				</div>	
 
@@ -254,7 +255,7 @@
 					<h4>ides</h4>
 					<p>jupyter &bull; eclipse &bull; vim &bull; idle</p>
 					<h4>other</h4>
-					<p>runtime analysis &bull; design principles&bull; agile development &bull; mathematical computation optimisation <span class='and'>and</span> conditioning &bull; proof of correctness &bull; data structures</p>
+					<p>runtime analysis &bull; design principles&bull; agile development &bull; mathematical computation optimisation <span class='and'>and</span> conditioning &bull; proof <span class='of'>of</span> correctness &bull; data structures</p>
 
 				</div>	
 
@@ -270,12 +271,12 @@
 				<h2>exprience<span class='code'> ( ) = {</h2>
 
 				<div class='indented'>
-					<h3>university of toronto | teaching assistant</h3>
+					<h3>university <span class='of'>of</span> toronto | teaching assistant</h3>
 					<div class='indented'>
 						<h4>winter <span class='num'>2019</span></h4>
 						<p>paid position at the university</p>
 						<p>hosted mandatory tutorials <span class='for'>for</span> the first year computer science course</p>
-						<p>demonstrated strong understanding of python coding <span class='and'>and</span> diagnostics</p>
+						<p>demonstrated strong understanding <span class='of'>of</span> python coding <span class='and'>and</span> diagnostics</p>
 						<p>create solutions manuals <span class='and'>and</span> mark midterms/final exams</p>
 						<p>host office hours <span class='and'>and</span> invigilate tests</p>
 					</div>
@@ -285,7 +286,7 @@
 					<h3>project include | teaching assistant</h3>
 					<div class='indented'>
 						<h4>summer <span class='num'>2018</span></h4>
-						<p>volunteering student initiative amongst team of <span class='num'>16</span></p>
+						<p>volunteering student initiative amongst team <span class='of'>of</span> <span class='num'>16</span></p>
 						<p> helped coordinate <span class='and'>and</span> carry out a coding bootcamp <span class='for'>for</span> at-risk secondary students across mississauga</p>
 						<p> teaching basic python at different libraries <span class='and'>and</span> schools <span class='for'>for</span> <span class='num'>4</span> weeks</p>
 						<p> prelimiary marketing <span class='and'>and</span> organisation 8 weeks prior</p>
@@ -293,7 +294,7 @@
 
 					<span class='tag open'>br</span>
 
-					<h3>university of toronto | special project</h3>
+					<h3>university <span class='of'>of</span> toronto | special project</h3>
 					<div class='indented'>
 						<h4>early <span class='num'>2019</span>-present</h4>
 						<p>volunteering project <span class='in'>in</span> conjunction <span class='with'>with</span> a professor</p>
@@ -311,7 +312,7 @@
 						<h4>present</h4>
 						<p>small independent projects <span class='and'>and</span> compsci+art on website</p>
 						<p>further java <span class='and'>and</span> python experiments on github repository</p>
-						<p> links are by the icons at the top of page</p>
+						<p> links are by the icons at the top <span class='of'>of</span> page</p>
 					</div>
 				</div>
 
