--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@ $('#button_about').trigger('click')
 
 		let fullCircle = document.createElement('div')
 		fullCircle.classList.add('fullCircle')
-		fullCircle.style.backgroundColor = theme.colors.colors.button
+		fullCircle.style.backgroundColor = theme.colors.colors.primary
 		circleContainer.appendChild(fullCircle)
 
 		buttonContainer.appendChild(circleContainer)
