--- a/index.html
+++ b/index.html
@@ -468,18 +468,20 @@
 		right: 10px;
 	}
 	.themeButton {
-		border-style: none;
+		/*border-style: none;*/
 		border-radius: 50%;
 		border-color: white;
 		border-width: thin;
+		border-style: solid;
+		border-color: rgba(0,0,0,0);
 		/*width:29px;
 		height:29px;*/
-	}
-
-	div.selectedTheme {
-		border-style: solid !important;
 		top: -1px;
 		left: -1px;
+	}
+	div.selectedTheme, .themeButton:hover {
+		transition: border-color 1s;
+		border-color: white !important;
 
 	}
 
