--- a/index.html
+++ b/index.html
@@ -738,11 +738,11 @@ $('#button_about').trigger('click')
 	}
 
 	autumnTheme = new Theme(autumn_js, 'autumn.js', new ThemeColors(
-		'#F7931E',
-		'#F7931E',
-		'#F7931E',
+		'#FBB03B',
+		'#FBB03B',
+		'#FBB03B',
 		'#ED1C24',
-		'#F7931E'
+		'#FBB03B'
 	))
 
 	sheepTheme = new Theme(()=>{}, 'sheep.js', new ThemeColors(
