--- a/resume3.html
+++ b/resume3.html
@@ -3,13 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>alex_pegg_resume</title>
+	<link href="https://peggalex.github.io/melnoFont/style.css" rel="stylesheet" type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet" type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Public+Sans&display=swap" rel="stylesheet" type='text/css'>
 </head>
 <style>
 
 	body {
-		font-family: 'Public Sans', sans-serif;
+		font-family: 'Menlo Regular', 'Public Sans', sans-serif;
 	}
 
 	.row {
