--- a/resume3.html
+++ b/resume3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>alex_pegg_resume</title>
-	<link href="https://peggalex.github.io/melnoFont/style.css" rel="stylesheet" type='text/css'>
+	<link href="https://peggalex.github.io/menloFont/style.css" rel="stylesheet" type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet" type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Public+Sans&display=swap" rel="stylesheet" type='text/css'>
 </head>
