--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
 		cursor: inherit;
 	}
 	
+	h1 {
+		transition: color 1s;
+	}
+	
 	@media only screen and (max-width: 1000px) {
 	  #centerEverything {
 	    	width: 100vw;
