--- a/rachel.html
+++ b/rachel.html
@@ -232,13 +232,15 @@
 			margin-top: 10px;
 			opacity: 0;
 			animation: fade_in 1s ease-in 1.25s forwards;
-
 		}
 
-		#footer > *{
-			margin-right: 10px;
+		#footer>p:not(:last-child){
+			margin-right:5px;
 		}
 
+		#footer>p:not(:last-child)::after {
+			content: '  |';
+		}
 		#imStuff {
 			margin-top: 10px;
 			width: 55%;
@@ -395,12 +397,10 @@
 		</div>
 	</div>
 	<div id='footer' class='row centered'>
-		<p>
-			inspiration by <a href='http://www.benegg.net/grade_calculator.html' target="_blank">ben egg</a>
-		</p>
-		<p>
-			| designed by <a href='https://peggalex.github.io' target="_blank">alex pegg</a> | © all rights reserved
-		</p>
+		<p>this website does not save your data</p>
+		<p>inspiration by <a href='http://www.benegg.net/grade_calculator.html' target="_blank">ben egg</a> </p>
+		<p>designed by <a href='https://peggalex.github.io' target="_blank">alex pegg</a></p>
+		<p>© all rights reserved</p>
 	</div>
 </body>
 
