--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Public+Sans:100&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif+JP:200&display=swap" rel="stylesheet">
 	<link href="https://peggalex.github.io/DPStickWebFont/stylesheet.css" rel="stylesheet">	
+	<link href="https://peggalex.github.io/UrgentFont/stylesheet.css" rel="stylesheet">	
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300&display=swap" rel="stylesheet">
 
 </head>
@@ -519,6 +520,10 @@
 		} to {
 			transform: translateX(-1500px);
 		}
+	}
+
+	#strBlossom > *{
+		font-family: 'urgentbrushregular';
 	}
 
 
